syntax = "proto3";

package video;
option go_package='./pb';

message douyin_feed_request {
	optional int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
}

message douyin_feed_response {
	repeated Video video_list = 3; // 视频列表
	optional int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message Video {
	int64 id = 1; // 视频唯一标识
	int64 author_id = 2; // 视频作者信息
	string play_url = 3; // 视频播放地址
	string cover_url = 4; // 视频封面地址
	string title = 8; // 视频标题
}

message User {
	int64 id = 1; // 用户id
	string name = 2; // 用户名称
	optional int64 follow_count = 3; // 关注总数
	optional int64 follower_count = 4; // 粉丝总数
	bool is_follow = 5; // true-已关注，false-未关注
}

message douyin_publish_action_request {
	int64 user_id = 1; // 用户id
	bytes data = 2; // 视频数据
	string title = 3; // 视频标题
}

message douyin_publish_action_response {
}

message douyin_publish_list_request {
	int64 user_id = 1; // 用户id
}

message douyin_publish_list_response {
	repeated Video video_list = 3; // 用户发布的视频列表
}

service VideoRpc {
	rpc feed(douyin_feed_request) returns(douyin_feed_response);
	rpc publish_action(douyin_publish_action_request) returns(douyin_publish_action_response);
	rpc publish_list(douyin_publish_list_request) returns(douyin_publish_list_response);
}
